force-app/main/default/objects/cgcloud__Account_Specific_Product_Condition__c/cgcloud__Account_Specific_Product_Condition__c.object-meta.xml
<CustomObject>
    <description>Holds the relation between a customer and the condition template.</description>
    <label>Customer Specific Product Condition</label>
    <nameField>
        <displayFormat>ASPC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Specific Product Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>