force-app/main/default/objects/cgcloud__Account_Specific_Product_Condition__c/fields/cgcloud__Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_List_Type__c</fullName>
    <description>Type of a price list.</description>
    <label>Price List Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WS1999</fullName>
                <label>WS1999 - Wholesaler</label>
            </value>
            <value>
                <fullName>WS2000</fullName>
                <label>WS2000 - Direct Customer</label>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
                <label>Not Relevant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>