force-app/main/default/objects/cgcloud__Account_Specific_Product_Condition__c/fields/cgcloud__Price_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_Type__c</fullName>
    <description>Type or usage of a price.</description>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>factory</fullName>
                <label>Factory</label>
            </value>
            <value>
                <fullName>consumer</fullName>
                <label>Consumer</label>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
                <label>Not Relevant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>