force-app/main/default/objects/cgcloud__Account_Specific_Product_Condition__c/fields/cgcloud__Product_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Description__c</fullName>
    <description>Description of selected Product.</description>
    <formula>cgcloud__Product__r.cgcloud__Description_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>