force-app/main/default/objects/cgcloud__Account_Specific_Product_Condition__c/fields/cgcloud__Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Quantity__c</fullName>
    <description>Used for quantity discounts.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>