force-app/main/default/objects/cgcloud__Account_Specific_Product_Condition__c/fields/cgcloud__Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value__c</fullName>
    <description>Holds the value of a condition.</description>
    <label>Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>