force-app/main/default/objects/cgcloud__Account_Specific_Product_Condition__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_lookups</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(cgcloud__Condition_Template__r.cgcloud__Sales_Org__c )&lt;&gt; cgcloud__Product__r.cgcloud__Sales_Org__c )||AND( cgcloud__Account__r.cgcloud__Sales_Org__c &lt;&gt;cgcloud__Product__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Product, the Condition Template and the Customer must have the same Sales Org.</errorMessage>
</ValidationRule>